[project]
name = "archie"
version = "0.2.2" 
description = ""
authors = [
    {name = "Helix128"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.3.0,<9.0.0)",
    "psutil (>=7.1.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "archie", from = "src"}]

[tool.poetry.scripts]
archie = "archie.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
